adding domain-specific utility classes hopefully easier to use than the raw API along with converters and a modification of the underlying generated code via mustache templates